[package]
name = "test"
version = "0.1.0"
authors = ["BlackDex"]
edition = "2018"

repository = "https://github.com/blackdex"
readme = "README.md"
license = "GPL-3.0-only"
publish = false
#build = "build.rs"

[dependencies]
soup = "0.3"

select = "0.4.2"

html5ever = "0.22.5"

# HTTP client
reqwest = "0.9.8"

regex = "1"
