[package]
name = "favicon_download"
version = "0.1.0"
authors = ["BlackDex"]
edition = "2018"

repository = "https://github.com/BlackDex/favicon_download"
readme = "README.md"
license = "GPL-3.0-only"
publish = false
#build = "build.rs"

[dependencies]
soup = "0.3.0"
reqwest = "0.9.9"
regex = "1.1.0"

