[package]
name = "favicon_download"
version = "0.2.0"
authors = ["BlackDex"]
edition = "2018"

repository = "https://github.com/BlackDex/favicon_download"
readme = "README.md"
license = "GPL-3.0-only"
publish = false

[dependencies]
soup = "0.4.1"
regex = "1.3.1"
log = "0.4.8"
env_logger = "0.7.1"

reqwest = "0.9.22"

# Use the cookies crate instead of the full rocket crate (which is used in bitwarden_rs)
# Rocket uses this library so it is exactly the same
cookie = { version = "0.12", features = ["percent-encode"] }

# Lazy static macro
lazy_static = "1.4.0"

[patch.crates-io]
